syntax = "proto3";

package raft_rpc;

// define a service
service RaftService {
    // define the interface and data type
    rpc TellMyHeartBeatToFollower (HeartBeatRequest) returns (HeartBeatReply) {}
    rpc RequestToVote (VoteRequest) returns (VoteReply) {}
}


message HeartBeatRequest {
    string name = 1;
}


message HeartBeatReply {
    string message = 1;
}


message VoteRequest {
    string name = 1;
    int64 termID = 2;
}


message VoteReply {
    string message = 1;
    bool   voteYou = 2;
}

